<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">추천</string>
    <string name="menu_gallery">로그인</string>
    <string name="menu_slideshow">회원가입</string>
    <string name="textview">요즘 제일 많이 읽어요</string>
    <string name="textview2">새로 나온 책</string>
    <string name="textview3">오늘의 pick</string>
    <string name="textview5">지원 님</string>

    <string name="text1">프로필</string>
    <string name="text2">책장</string>
    <string name="text3">내가 그린 책 목록</string>
    <string name="text4">내가 그린 책 수정하기</string>

    <string name="exitbtn">exitbtn</string>
    <string name="basicimg">basicimg</string>
    <string name="savebtn">savebtn</string>
    <string name="draw_img">draw_img</string>
    <string name="title2">내가</string>
    <string name="title3">그린</string>
    <string name="title4">기린 그림은?</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="bookname">빨간 모자와 늑대</string>
    <string name="bookname1">TextView</string>
    <string name="bookartist1">TextView</string>
    <string name="bookinfo1">TextView</string>
    <string name="option1">나만의 그림책 만들기</string>
    <string name="option2">원본읽기</string>
    <string name="title_activity_user">activity_user</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user1">TextView</string>
    <string name="usercontent1">TextView</string>
    <string name="end">이야기가 끝났습니다</string>
    <string name="tohome">홈으로 돌아가기</string>

    <string name="menu_edit">책 목록</string>
    <string name="test">Button</string>
    <string name="textview9">TextView</string>
    <string name="userimage">늑대를 잡아먹어버렸어요</string>
    <string name="textview10">TextView</string>
    <string name="textview12">TextView</string>
    <string name="button4">조회하기</string>
</resources>