<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"></include>

    <TextView
        android:id="@+id/bookname1"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="316dp"
        android:fontFamily="@font/jalnan"
        android:gravity="center_horizontal"
        android:text="@string/bookname1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bookartist1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="368dp"
        android:fontFamily="@font/a"
        android:gravity="center_horizontal"
        android:text="@string/bookartist1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bookinfo1"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="404dp"
        android:fontFamily="@font/a"
        android:gravity="center_horizontal"
        android:text="@string/bookinfo1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="636dp"
        android:fontFamily="@font/a"
        android:text="@string/option1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="352dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="636dp"
        android:text="@string/option2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imagemain3"
        android:layout_width="410dp"
        android:layout_height="210dp"
        app:layout_constraintBottom_toTopOf="@+id/bookname1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>